# drmz_deployment

./: main.py  pyproject.toml  requirements.txt
agents/academy/: ada.yaml  joseph.yaml  moffett.yaml  socrates.yaml  walter.yaml
agents/primary/: morpheus.yaml
agents/subagents/: academic_affairs_specialist.yaml  ai_digital_coach.yaml  code_architect.yaml  content_reviewer.yaml  curriculum_developer.yaml  editor.yaml  governance_analyst.yaml  interactive_learning_designer.yaml  knowledge_extractor.yaml  researcher.yaml  web3_integration_analyst.yaml  writer.yaml
crews/: content_crew.py  crews.yaml  morpheus_crew.py  run.py
flows/: guide_creator_flow.py  morpheus_chat_flow.py
outputs/guides/: complete_guide_bitcoin_defi_on_cardano.md  guide_outline.json
tasks/: content_tasks.yaml  morpheus_tasks.yaml  tasks.yaml
