[project]
name = "drmz_deployment"
version = "0.1.0"
description = "DRMZ Morpheus Chat using crewAI"
authors = [{ name = "Rodrigo Gomez", email = "rodrigo.a.gomez17@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "crews", "agents", "tasks", "flows"]

# For CrewAI deployment
[tool.crewai]
type = "flow"
entry_point = "main:run"