[project]
name            = "drmz_deployment"
version         = "0.1.0"
description     = "DRMZ Morpheus Enterprise deployment"
authors         = [{ name = "Rodrigo Gomez", email = "rodrigo.a.gomez17@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
  "crewai[tools]>=0.105.0,<1.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0"
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type        = "flow"
entry_point = "main:run"

# Remove the project.scripts and wheel sections entirely